// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routing component renders a route for a plugin 1`] = `
<Route
  component={
    Object {
      "$$typeof": Symbol(react.memo),
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(WithAuthComponent)",
      "type": [Function],
    }
  }
  path="test-link"
/>
`;

exports[`Routing component renders component with no plugin routes 1`] = `
<div
  className="container-class"
>
  <Switch>
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(HomePage)",
          "type": [Function],
        }
      }
      exact={true}
      path="/"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(LoginPageComponent)",
          "type": [Function],
        }
      }
      exact={true}
      path="/login"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(CookiesPage)",
          "type": [Function],
        }
      }
      exact={true}
      path="/cookies"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(WithAuthComponent)",
          "type": [Function],
        }
      }
    />
  </Switch>
</div>
`;

exports[`Routing component renders component with plugins 1`] = `
<div
  className="container-class"
>
  <Switch>
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(HomePage)",
          "type": [Function],
        }
      }
      exact={true}
      path="/"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(LoginPageComponent)",
          "type": [Function],
        }
      }
      exact={true}
      path="/login"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(CookiesPage)",
          "type": [Function],
        }
      }
      exact={true}
      path="/cookies"
    />
    <PluginRoute
      key="test section_test link"
      plugin={
        Object {
          "displayName": "Test Plugin",
          "link": "test link",
          "order": 1,
          "plugin": "test_plugin_name",
          "section": "test section",
        }
      }
    />
    <PluginRoute
      key="test section 2_test link 2"
      plugin={
        Object {
          "displayName": "Test Plugin 2",
          "link": "test link 2",
          "order": 2,
          "plugin": "test_plugin_name_2",
          "section": "test section 2",
        }
      }
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(WithAuthComponent)",
          "type": [Function],
        }
      }
    />
  </Switch>
</div>
`;

exports[`Routing component renders placeholder for a plugin 1`] = `
<div
  id="test_id"
>
  test_id
   failed to load correctly
</div>
`;
